Fix spacing for top-level cells component

--- a/packages/styles/themes/base.css
+++ b/packages/styles/themes/base.css
@@ -45,6 +45,7 @@
 .nteract-cells {
   padding-bottom: 10px;
   margin: 20px 0;
+  padding: var(--nt-spacing-m, 10px);
 }
 
 .nteract-cell-input .nteract-cell-source {
